# magpie_prompts

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/magpie_prompts/: confirmation_safe_executor.py  conversation.py  magpie_execution.py  task_configs.py
src/magpie_prompts/prompts/: dg_command_enumerator.py  (+19 more)
tests/: behavior_elicitation.ipynb  behavior_elicitation_claude.ipynb  behavior_elicitation_deligrasp.ipynb  behavior_elicitation_deligrasp_claude.ipynb  behavior_elicitation_deligrasp_openai.ipynb  behavior_elicitation_gemini.ipynb  behavior_elicitation_openai.ipynb  behavior_elicitation_v2.ipynb  behavior_elicitation_v2_claude_safety_rule.ipynb  behavior_elicitation_v2_gemini.ipynb  behavior_elicitation_v2_gemini_safety_rule.ipynb  behavior_elicitation_v2_openai.ipynb  behavior_elicitation_v2_openai_safety_rule.ipynb  claude-19.txt  deligrasp_model_task_summary.csv  gemini-14.txt  gemini-18.txt  intrinsic_matrix.npy  openai-16.txt  scrap_prompts.py  test_grasp_selection.ipynb  test_inspire.ipynb  test_literal_eval.ipynb  test_parallel_api_calls.ipynb  test_position_force.ipynb  test_prompt_execution.ipynb  test_scaling_force.ipynb  test_teleop_velocity.ipynb
tests/behavior_elicitation/: analysis_v2.ipynb  charts.ipynb  charts_v2.ipynb  claude-16.txt  claude-17.txt  claude-18.txt  claude-20.txt  gemini-15.txt  gemini-16.txt  gemini-17.txt  gemini-19.txt  gemini-20.txt  metrics.txt  openai-14.txt  openai-15.txt  openai-17.txt  openai-18.txt  openai-19.txt  profile_gen.py  profile_gen_v2.py  sr_harm.csv  sr_harm_v3.csv  sr_harm_v4.csv  sr_v1.csv
(+3841 files in other folders)
