[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magpie_prompts"
version = "2025.4"
authors = [
  { name="William Xie", email="wixi6454@colorado.edu" },
]
description = "magpie_prompts"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'absl_py',
  'colorama',
  'openai',
  'termcolor',
]

[project.urls]
Homepage = "https://github.com/correlllab/magpie_prompts"
Issues = "https://github.com/correlllab/magpie_prompts/issues"